# HorseRacing

./: .env.example  .gitignore  claude.md  main.py  pyproject.toml  requirements.txt
agents/: orchestrator.py
agents/collector/: bootstrap.py  data_cleaner.py
agents/collector/hkjc/: scraper_odds.py  scraper_profiles.py  scraper_racecard.py  scraper_results.py
agents/collector/mjc/: scraper_racecard.py  scraper_results.py
agents/monitor/: alerter.py  data_validator.py  health_checker.py  readiness.py
agents/predictor/: backtester.py  bet_sizer.py  feature_engine.py  model_predictor.py  model_trainer.py  pnl_tracker.py  speed_figure.py
config/: logging_config.py  settings.py
db/: database.py  models.py
deploy/: horseracing.service  paper-predict-today.service  paper-predict.service  paper-predict.timer  paper-settle.service  paper-settle.timer  setup_server.sh
discord_bot/: webhook.py
output/guide/: horse_racing_guide_tc.html  horse_racing_guide_tc.md
output/paper_trades/: ledger.jsonl
scripts/: backfill_paper_trades.py  backfill_speed_figures.py  backtest_blend.py  bettype_compare.py  bootstrap_historical.py  build_guide_pdf.py  check_accuracy.py  explore_improvements.py  paper_trade.py  predict_now.py  readiness_check.py  review_shadow_results.py  run_backtest.py  run_bootstrap_2024.py  run_bootstrap_season.py  run_full_backtest.py  run_ranker_experiments.sh  run_refined_backtest.py  shadow_test_meeting.py  train_model.py  validate_sweetspot.py  walk_forward_validate.py
tests/: conftest.py
