[project]
name = "horseracing-predictor"
version = "0.1.0"
description = "HKJC + Macau horse racing prediction system with ML-based betting"
requires-python = ">=3.11"
dependencies = [
    # Core
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "apscheduler>=3.10,<4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # Scraping
    "requests>=2.31",
    "selenium>=4.15",
    "webdriver-manager>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",

    # Data & ML
    "pandas>=2.1",
    "numpy>=1.26",
    "lightgbm>=4.1",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
    "joblib>=1.3",

    # Monitoring
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
